商品类型相关api
